--- a/.windows/Documents/Starship/config.toml
+++ b/.windows/Documents/Starship/config.toml
@@ -29,7 +29,7 @@ show_always = true
 [directory]
 truncation_length = 3
 truncation_symbol = "…/"
-home_symbol = " ~"
+home_symbol = "~"
 read_only_style = "197"
 read_only = "  "
 format = "at [$path]($style)[$read_only]($read_only_style) "
