--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,10 @@
 	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
 [push]
 	autoSetupRemote = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[init]
+	defaultBranch = main
