--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -14,13 +14,13 @@ print_info() {
 #    info " ​ ​  " disk
     info " ​ ​ 󰑭" memory
     info " ​ ​ 󰍹 " resolution
-#    info " ​ ​ 󱈑 " battery 
+    info " ​ ​ 󱈑 " battery 
     prin "├─────────\n Software Information \n─────────┤"
-#    info " ​ ​  " users
+    info " ​ ​  " users
     info " ​ ​  " distro
 # Just get your distro's logo off nerdfonts.com
     info " ​ ​  " kernel
-#    info " ​ ​  " de
+    info " ​ ​  " de
     info " ​ ​  " wm
     info " ​ ​  " shell
     info " ​ ​  " term
@@ -29,13 +29,13 @@ print_info() {
 #    info " ​ ​  󰉼 " theme
 #    info " ​ ​  󰀻 " icons
     info " ​ ​ 󰊠 " packages 
-#    info " ​ ​  󰅐 " uptime
+    info " ​ ​  󰅐 " uptime
 #    info " ​ ​   " gpu_driver  # Linux/macOS only
 #    info " ​ ​  " cpu_usage
 #    info " ​ ​ 󰝚 " song
     # [[ "$player" ]] && prin "Music Player" "$player"
-#    info " ​ ​   " local_ip
-#    info " ​ ​   " public_ip
+    info " ​ ​   " local_ip
+    info " ​ ​   " public_ip
 #    info " ​ ​   " locale  # This only works on glibc systems.
     prin "└───────────────────────────────────────┘"
     info cols
