--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -35,11 +35,11 @@ print_info() {
 #    info " ​ ​ 󰝚 " song
     # [[ "$player" ]] && prin "Music Player" "$player"
     info " ​ ​   " local_ip
-    info " ​ ​   " public_ip
+#    info " ​ ​   " public_ip
 #    info " ​ ​   " locale  # This only works on glibc systems.
     prin "└───────────────────────────────────────┘"
-    info cols
-prin "\n \n \n \n \n ${cl3} \n \n ${cl5} \n \n ${cl2} \n \n ${cl6}  \n \n ${cl4}  \n \n ${cl1}  \n \n ${cl7}  \n \n ${cl0}"
+#    info cols
+#prin "\n \n \n \n \n ${cl3} \n \n ${cl5} \n \n ${cl2} \n \n ${cl6}  \n \n ${cl4}  \n \n ${cl1}  \n \n ${cl7}  \n \n ${cl0}"
 }
 
 kernel_shorthand="on"
