--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,10 +1,12 @@
-preload = ~/mnt/Dropbox/Pictures/Wallpapers/spiderman-no-way-home.jpg
+preload = ~/Pictures/Wallpapers/spiderman-no-way-home.jpg
+preload = ~/Pictures/Wallpapers/lufy.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 #preload = /path/to/next_image.png
 # .. more preloads
 
 #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
 wallpaper = HDMI-A-1,~/mnt/Dropbox/Pictures/Wallpapers/spiderman-no-way-home.jpg
+wallpaper = eDP-1,~/mnt/Dropbox/Pictures/Wallpapers/lufy.jpg
 #if more than one monitor in use, can load a 2nd image
 # wallpaper = monitor2,/path/to/next_image.png
 # .. more monitors
