--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -26,6 +26,7 @@ blacker = #1a1b26
 width = 100%
 height = 24pt
 radius = 6
+monitor = ${env:MONITOR:}
 
 ; dpi = 96
 
@@ -64,7 +65,6 @@ enable-ipc = true
 ; wm-restack = i3
 
 ; override-redirect = true
-
 [module/xworkspaces]
 type = internal/xworkspaces
 
@@ -87,17 +87,6 @@ label-empty-padding = 1
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
