--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,8 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=HDMI-A-1,1920x1080@75,0x0,1
+monitor=eDP-1,1920x1080@60,1920x0,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
