--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -125,7 +125,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, space, exec, wofi --show drun
+bind = $mainMod, space, exec, killall wofi || wofi --show drun
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
