use rofi instead of wofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,6 +113,7 @@ device:epic-mouse-v1 {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
+$altMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, killactive,
@@ -125,7 +126,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, space, exec, killall wofi || wofi --show drun
+bind = $mainMod, space, exec, killall rofi || rofi -show drun
+bind = $altMod, TAB, exec, killall rofi || rofi -show window
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
