add some packages, kitty cofig

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,10 +56,10 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = true
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
+    # blur = true
+    # blur_size = 3
+    # blur_passes = 1
+    # blur_new_optimizations = true
 
     drop_shadow = true
     shadow_range = 4
@@ -123,7 +123,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # App specific binds
-bind = $mainMod, RETURN, exec, alacritty
+bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, space, exec, killall rofi || rofi -show drun
