--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,7 @@
 	program = gpg
 	format = ssh
 [gpg "ssh"]
-	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
+	program = /opt/1Password/op-ssh-sign
 [push]
 	autoSetupRemote = true
 [filter "lfs"]
