--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=HDMI-A-1,1920x1080@75,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & dunst
+exec-once = waybar & hyprpaper & dunst & 1password --silent
 exec-once=/usr/libexec/polkit-gnome-authentication-agent-1
 
 # Source a file (multi-file configs)
