misc hyprland improvements

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,10 +1,10 @@
-preload = ~/Pictures/Wallpapers/spiderman-no-way-home.jpg
+preload = ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg
 #if more than one preload is desired then continue to preload other backgrounds
 #preload = /path/to/next_image.png
 # .. more preloads
 
 #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = HDMI-A-1,~/Pictures/Wallpapers/spiderman-no-way-home.jpg
+wallpaper = HDMI-A-1,~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg
 #if more than one monitor in use, can load a 2nd image
 # wallpaper = monitor2,/path/to/next_image.png
 # .. more monitors
