--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,6 +2,7 @@
   "layer": "top",
   "modules-left": [
     "clock",
+    "custom/playerctl",
     "hyprland/window"
   ],
   "modules-center": [
@@ -17,7 +18,7 @@
     "pulseaudio",
     "bluetooth",
     "backlight",
-    "battery"
+    "battery",
   ],
   "hyprland/window": {
     "format": "{title}",
@@ -151,12 +152,12 @@
     "input": true
   },
   "custom/playerctl": {
-    "format": "{icon}  <span>{}</span>",
+    "format": "{icon} <span>{}</span>",
     "return-type": "json",
     "max-length": 333,
     "exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} ~ {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-    "on-click-middle": "playerctl play-pause",
-    "on-click": "playerctl previous",
+    "on-click-middle": "playerctl previous",
+    "on-click": "playerctl play-pause",
     "on-click-right": "playerctl next",
     "format-icons": {
       "Playing": "<span foreground='#98BB6C'></span>",
