--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,9 @@ monitor=HDMI-A-1,1920x1080@75,0x0,1
 
 # Execute your favorite apps at launch
 exec-once = waybar & hyprpaper & dunst & 1password --silent
-exec-once=/usr/libexec/polkit-gnome-authentication-agent-1
+exec-once =/usr/libexec/polkit-gnome-authentication-agent-1
+exec-once = wl-paste -t text --watch clipman store --no-persist
+exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -115,11 +117,9 @@ $mainMod = SUPER
 $altMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, L, exec, swaylock
+bind = $mainMod, Q, killactive
+bind = $mainMod SHIFT, Q, exit
 
 # App specific binds
 bind = $mainMod, RETURN, exec, kitty
@@ -166,6 +166,13 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Audio control from keyboard
 bind = ,XF86AudioRaiseVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bind = ,XF86AudioLowerVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = ,XF86AudioMute,exec,wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+# clipboard manager
+bind = $mainMod, V, exec, clipman pick -t rofi
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = , Print, exec, grim
+
