kitty and alacritty updates

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1501,7 +1501,7 @@ shell_integration enabled
 #: This option must be a comma separated list of the above values.
 #: Only the first valid match, in the order specified, is sourced.
 
-# term xterm-kitty
+term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
