--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1,1920x1080@75,0x0,1
+monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -117,9 +117,10 @@ $mainMod = SUPER
 $altMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, L, exec, swaylock
+bind = $mainMod, L, exec, swaylock -e -f -i ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, Q, exit
+bind = $mainMod SHIFT, R, exec, killall waybar && waybar
 
 # App specific binds
 bind = $mainMod, RETURN, exec, kitty
@@ -133,6 +134,12 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# Move windows with mainMod + SHIFT + arrow keys
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
