waybar and some other changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,6 +26,10 @@ bold_italic_font auto
 
 font_size 13.0
 
+# Search terminal contents with fzf
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i
+
+
 #: Font size (in pts)
 
 # force_ltr no
