--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ exec-once = waybar & hyprpaper & dunst & 1password --silent
 exec-once =/usr/libexec/polkit-gnome-authentication-agent-1
 exec-once = wl-paste -t text --watch clipman store --no-persist
 exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
-exec-once = swayirle -w \
+exec-once = swayidle -w \
     timeout 300 'swaylock -e -f -i ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg' \
     timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -e -f -i ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg'
@@ -116,7 +116,6 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 $altMod = ALT
@@ -125,7 +124,7 @@ $altMod = ALT
 bind = $mainMod, L, exec, swaylock -e -f -i ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, Q, exit
-bind = $mainMod SHIFT, R, exec, killall waybar && waybar
+bind = $mainMod SHIFT, R, exec, killall waybar && waybar && hyprpm reload -n
 
 # App specific binds
 bind = $mainMod, RETURN, exec, kitty
@@ -134,6 +133,7 @@ bind = $mainMod, B, exec, firefox
 bind = $mainMod, space, exec, killall rofi || rofi -show drun
 bind = $altMod, TAB, exec, killall rofi || rofi -show window
 bind = $mainMod SHIFT, C, exec, hyprpicker --autocopy
+bind = CTRL SHIFT, space, exec, 1password --quick-access
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -191,6 +191,7 @@ bind = ,XF86AudioRaiseVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bind = ,XF86AudioLowerVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = ,XF86AudioMute,exec,wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl=, XF86AudioPlay, exec, playerctl play-pause
+bindl=, XF86AudioPause, exec, playerctl play-pause
 bindl=, XF86AudioNext, exec, playerctl next
 bindl=, XF86AudioPrev, exec, playerctl previous
 
