--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ Public
 Virtual Machines.localized
 Work
 go
+code
 
 # Cache
 .cache
@@ -42,6 +43,17 @@ go
 .terraform.d
 .viminfo
 .config/configstore
+.bun
+.gnupg
+.gradle
+.ipython
+.android
+.aws
+.aws-sam
+.cargo
+.cdk
+.wget-hsts
+*.tmp*
 
 # secreates
 .profile
