--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,8 @@
 [init]
 	defaultBranch = main
 [credential "https://github.com"]
-	helper = gh auth git-credential
+	helper = !gh auth git-credential
 [credential "https://gist.github.com"]
-	helper = gh auth git-credential
+	helper = !gh auth git-credential
+[pull]
+	rebase = true
