--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,7 @@
 	program = gpg
 	format = ssh
 [gpg "ssh"]
-	program = /opt/1Password/op-ssh-sign
+	program = op-ssh-sign
 [push]
 	autoSetupRemote = true
 [filter "lfs"]
@@ -25,8 +25,6 @@
 [init]
 	defaultBranch = main
 [credential "https://github.com"]
-	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = gh auth git-credential
 [credential "https://gist.github.com"]
-	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = gh auth git-credential
