--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -169,7 +169,7 @@ format = '[[ $symbol( $version) ](fg:base bg:teal)]($style)'
 [docker_context]
 symbol = ""
 style = "bg:mantle"
-format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
+format = '[[ $symbol( $context) ](fg:#83a598 bg:blue)]($style)'
 
 [time]
 disabled = false
