small fixes, use ohmyzsh + starship

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,10 +18,6 @@ exec-once = waybar & hyprpaper & dunst & 1password --silent
 exec-once =/usr/libexec/polkit-gnome-authentication-agent-1
 exec-once = wl-paste -t text --watch clipman store --no-persist
 exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
-exec-once = swayidle -w \
-    timeout 300 'swaylock -e -f -i ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg' \
-    timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-    before-sleep 'swaylock -e -f -i ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg'
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -106,7 +102,8 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device:epic-mouse-v1 {
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
 
