--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -123,7 +123,7 @@
       "Android Studio": "󰀴",
       "htop": "󱑽",
       "gnome-system-monitor": "󱑽",
-      "nm-connection-editor": "",
+      "nm-connection-editor": ""
     }
   },
   "battery": {
