--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".oh-my-bash"]
 	path = .oh-my-bash
 	url = https://github.com/ohmybash/oh-my-bash
+[submodule ".zsh/ohmyzsh"]
+	path = .zsh/ohmyzsh
+	url = https://github.com/ohmyzsh/ohmyzsh
