--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,12 +1,3 @@
-# This is an example Hyprland config file.
-#
-# Refer to the wiki for more information.
-
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
 
@@ -14,10 +5,11 @@ monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
 
 # Execute your favorite apps at launch
 exec-once = hyprpm reload -n
-exec-once = waybar & hyprpaper & dunst & 1password --silent
-exec-once =/usr/libexec/polkit-gnome-authentication-agent-1
-exec-once = wl-paste -t text --watch clipman store --no-persist
-exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
+exec-once = waybar & hyprpaper & dunst & bitwarden-desktop
+#exec-once =/usr/libexec/polkit-gnome-authentication-agent-1
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = hypridle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -118,7 +110,7 @@ $mainMod = SUPER
 $altMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, L, exec, swaylock -e -f -i ~/Pictures/Wallpapers/nezuko-kamado-anime-girl-3925x2894-11937.jpeg
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, Q, exit
 bind = $mainMod SHIFT, R, exec, killall waybar && waybar && hyprpm reload -n
@@ -130,7 +122,7 @@ bind = $mainMod, B, exec, firefox
 bind = $mainMod, space, exec, killall rofi || rofi -show drun
 bind = $altMod, TAB, exec, killall rofi || rofi -show window
 bind = $mainMod SHIFT, C, exec, hyprpicker --autocopy
-bind = CTRL SHIFT, space, exec, 1password --quick-access
+bind = CTRL SHIFT, space, exec, killall rofi || rofi -show bwm
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -193,7 +185,7 @@ bindl=, XF86AudioNext, exec, playerctl next
 bindl=, XF86AudioPrev, exec, playerctl previous
 
 # clipboard manager
-bind = $mainMod, V, exec, killall rofi || clipman pick -t rofi
+bind = $mainMod, V, exec, killall rofi || cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = , Print, exec, grim
 
