--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -19,6 +19,7 @@ $java\
 $kotlin\
 $haskell\
 $python\
+$terraform\
 [](fg:teal bg:blue)\
 $docker_context\
 [](fg:blue bg:purple)\
@@ -166,6 +167,11 @@ symbol = ""
 style = "bg:teal"
 format = '[[ $symbol( $version) ](fg:base bg:teal)]($style)'
 
+[terraform]
+symbol = "󱁢"
+style = "bg:lavender"
+format = '[[ $symbol( $version$workspace) ](fg:base bg:teal)]($style)'
+
 [docker_context]
 symbol = ""
 style = "bg:mantle"
@@ -174,7 +180,7 @@ format = '[[ $symbol( $context) ](fg:#83a598 bg:blue)]($style)'
 [time]
 disabled = false
 use_12hr = true
-time_format = "%r"
+time_format = "%l:%M %p"
 style = "bg:peach"
 format = '[[  $time ](fg:mantle bg:purple)]($style)'
 
