--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -105,14 +105,11 @@
     "window-rewrite": {
       "google-chrome": "",
       "firefox": "",
-      "title<.*YouTube.*>": "",
-      "title<.*github.*>": "",
-      "title<.*Aniwatch.*>": "󰑈",
       "kitty": "",
       "alacritty": "",
       "code": "󰨞",
       "nautilus": "",
-      "1password": "",
+      "Bitwarden": "",
       "gnome-disks": "",
       "gparted": "",
       "polkit-gnome-authentication-agent-1": "",
