add playerctl and some fixes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,7 +113,7 @@ $altMod = ALT
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, Q, exit
-bind = $mainMod SHIFT, R, exec, killall waybar && waybar && hyprpm reload -n
+bind = $mainMod SHIFT, R, exec, killall waybar && waybar && hyprpm reload -n || waybar
 
 # App specific binds
 bind = $mainMod, RETURN, exec, kitty
