--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ exec-once = waybar & hyprpaper & dunst & bitwarden-desktop
 #exec-once =/usr/libexec/polkit-gnome-authentication-agent-1
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = hypridle
+#exec-once = hypridle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -113,7 +113,7 @@ $altMod = ALT
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, Q, exit
-bind = $mainMod SHIFT, R, exec, killall waybar && waybar && hyprpm reload -n || waybar
+bind = $mainMod SHIFT, R, exec, killall waybar || killall .waybar-wrapped && waybar && hyprpm reload -n
 
 # App specific binds
 bind = $mainMod, RETURN, exec, kitty
