neovim rewrite and some fixes

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -76,7 +76,7 @@ style = "bg:surface0 fg:text"
 [os.symbols]
 Windows = "󰍲"
 Ubuntu = "󰕈"
-SUSE = ""
+openSUSE = " "
 Raspbian = "󰐿"
 Mint = "󰣭"
 Macos = "󰀵"
