--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,10 +7,11 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "vim_mode": true,
   "theme": "Andromeda",
   "base_keymap": "VSCode",
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "ui_font_size": 15,
+  "buffer_font_size": 15,
   "autosave": "on_focus_change",
   "format_on_save": "on"
 }
