--- a/.setup/Brewfile
+++ b/.setup/Brewfile
@@ -2,167 +2,137 @@ tap "aws/tap"
 tap "esolitos/ipa"
 tap "homebrew/bundle"
 tap "jeffreywildman/virt-manager"
+tap "libsql/sqld"
 tap "microsoft/git"
 tap "oven-sh/bun"
-# Interpreted, interactive, object-oriented programming language
-brew "python@3.11"
-# CLI tool to build, test, debug, and deploy Serverless applications using AWS SAM
+tap "tursodatabase/tap"
+tap "vineelsai26/tap"
+tap "xpipe-io/tap"
+brew "ansible"
+brew "ansible-lint"
+brew "autojump"
 brew "aws-sam-cli"
-# Official Amazon AWS command-line interface
+brew "python@3.11"
 brew "awscli"
-# Bourne-Again SHell, a UNIX command interpreter
 brew "bash"
-# Clone of cat(1) with syntax highlighting and Git integration
-brew "bat"
-# Resource monitor. C++ version and continuation of bashtop and bpytop
-brew "btop"
-# C library implementing the SSH2 protocol
 brew "libssh2"
-# Modern replacement for 'ls'
-brew "exa"
-# Simple, fast and user-friendly alternative to find
+brew "bat"
+brew "btop"
+brew "eza"
 brew "fd"
-# Command-line fuzzy finder written in Go
 brew "fzf"
-# GitHub command-line tool
 brew "gh"
-# Distributed revision control system
 brew "git"
-# Tcl/Tk UI for the git revision control system
-brew "git-gui"
-# Git extension for versioning large files
 brew "git-lfs"
-# GNU Pretty Good Privacy (PGP) package
+brew "pinentry"
 brew "gnupg"
-# Open source programming language to build simple/reliable/efficient software
 brew "go"
-# Kubernetes package manager
-brew "helm"
-# Improved top (interactive process viewer)
 brew "htop"
-# Simple terminal UI for git commands
+brew "jq"
 brew "lazygit"
-# Fast and user friendly build system
 brew "meson"
-# Free (GNU) replacement for the Pico text editor
 brew "nano"
-# Fast, highly customisable system info script
 brew "neofetch"
-# Ambitious Vim-fork focused on extensibility and agility
 brew "neovim"
-# Object-relational database system
-brew "postgresql@14"
-# Interpreted, interactive, object-oriented programming language
-brew "python@3.9"
-# Rsync for cloud storage
+brew "nmap"
+brew "ollama"
+brew "pigz"
+brew "pinentry-mac"
+brew "pre-commit"
+brew "pv"
+brew "pyenv"
 brew "rclone"
-# Search tool like grep and The Silver Searcher
 brew "ripgrep"
-# Safe, concurrent, practical language
-brew "rust"
-# CLI tool to generate terraform files from existing infrastructure
+brew "rsync"
+brew "ruby"
+brew "rustup-init"
+brew "scrcpy"
+brew "starship"
+brew "telnet"
 brew "terraformer"
-# Thin wrapper for Terraform e.g. for locking state
 brew "terragrunt"
-# Terraform version manager inspired by rbenv
 brew "tfenv"
-# Simplified and community-driven man pages
 brew "tldr"
-# Terminal multiplexer
 brew "tmux"
-# Internet file retriever
+brew "trash"
+brew "wakeonlan"
 brew "wget"
-# UNIX shell (command interpreter)
+brew "zoxide"
 brew "zsh"
-# Non-interactive ssh password auth Files
+brew "zsh-autosuggestions"
 brew "esolitos/ipa/sshpass"
-# Incredibly fast JavaScript runtime, bundler, transpiler and package manager - all in one.
+brew "jeffreywildman/virt-manager/virt-viewer"
 brew "oven-sh/bun/bun"
-# Password manager that keeps all passwords secure behind one password
-cask "1password"
-# Command-line helper for the 1Password password manager
-cask "1password-cli"
-# Android SDK component
+brew "tursodatabase/tap/turso"
+brew "vineelsai26/tap/checkout"
 cask "android-platform-tools"
-# Tools for building Android applications
 cask "android-studio"
-# Tool to flash OS images to SD cards & USB drives
+cask "arc"
 cask "balenaetcher"
-# Web browser focusing on privacy
+cask "betterdisplay"
 cask "brave-browser"
-# Voice and text chat software
 cask "discord"
-# App to build and share containerized applications and microservices
 cask "docker"
-# Web browser
 cask "firefox"
-cask "git-credential-manager-core"
-# Desktop client for GitHub repositories
-cask "github"
-# Web browser
 cask "google-chrome"
-# Utility to hide menu bar items
+cask "google-drive"
 cask "hiddenbar"
-# Terminal emulator as alternative to Apple's Terminal app
 cask "iterm2"
-# Customize mouse behavior
+cask "jellyfin-media-player"
+cask "kitty"
 cask "linearmouse"
-# App to write, plan, collaborate, and get organized
+cask "logitech-g-hub"
+cask "microsoft-edge"
+cask "microsoft-remote-desktop"
+cask "nosql-workbench"
 cask "notion"
-# Knowledge base that works on top of a local folder of plain text Markdown files
+cask "notion-calendar"
+cask "obs"
 cask "obsidian"
-# Collaboration platform for API development
+cask "pgadmin4"
 cask "postman"
-# IDE for Python programming - Community Edition
+cask "protonvpn"
 cask "pycharm-ce"
-# Peer to peer Bitorrent client
-cask "qbittorrent"
-# Control your tools with a few keystrokes
+cask "raspberry-pi-imager"
 cask "raycast"
-# Team communication and collaboration software
+cask "remoteviewer"
 cask "slack"
-# Music streaming service
-cask "spotify"
-# System monitor for the menu bar
 cask "stats"
-# Mesh VPN based on Wireguard
 cask "tailscale"
-# Open-source code editor
+cask "tigervnc-viewer"
 cask "visual-studio-code"
-# Multimedia player
 cask "vlc"
-# Create, manage, and run virtual machines
-cask "vmware-fusion"
-# Desktop client for WhatsApp
+cask "warp"
 cask "whatsapp"
-# Video communication and virtual meeting platform
+cask "zed"
 cask "zoom"
-vscode "42Crunch.vscode-openapi"
 vscode "aaron-bond.better-comments"
 vscode "bradlc.vscode-tailwindcss"
-vscode "christian-kohler.npm-intellisense"
-vscode "CircleCI.circleci"
+vscode "catppuccin.catppuccin-vsc"
+vscode "catppuccin.catppuccin-vsc-icons"
+vscode "circleci.circleci"
 vscode "csstools.postcss"
-vscode "DavidAnson.vscode-markdownlint"
+vscode "davidanson.vscode-markdownlint"
+vscode "dotenv.dotenv-vscode"
 vscode "eamodio.gitlens"
-vscode "EditorConfig.EditorConfig"
+vscode "ecmel.vscode-html-css"
+vscode "editorconfig.editorconfig"
 vscode "esbenp.prettier-vscode"
-vscode "GitHub.codespaces"
-vscode "GitHub.copilot"
-vscode "GitHub.copilot-chat"
-vscode "GitHub.remotehub"
+vscode "foxundermoon.shell-format"
+vscode "github.codespaces"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "github.remotehub"
 vscode "github.vscode-github-actions"
-vscode "GitHub.vscode-pull-request-github"
 vscode "golang.go"
+vscode "hashicorp.hcl"
 vscode "hashicorp.terraform"
 vscode "howardzuo.vscode-npm-dependency"
-vscode "IBM.output-colorizer"
-vscode "isudox.vscode-jetbrains-keybindings"
+vscode "ibm.output-colorizer"
 vscode "ms-azuretools.vscode-docker"
-vscode "ms-kubernetes-tools.vscode-kubernetes-tools"
 vscode "ms-python.black-formatter"
+vscode "ms-python.debugpy"
 vscode "ms-python.isort"
-vscode "ms-python.pylint"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
 vscode "ms-toolsai.jupyter"
@@ -175,16 +145,20 @@ vscode "ms-vscode-remote.remote-ssh"
 vscode "ms-vscode-remote.remote-ssh-edit"
 vscode "ms-vscode-remote.remote-wsl"
 vscode "ms-vscode-remote.vscode-remote-extensionpack"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.live-server"
+vscode "ms-vscode.makefile-tools"
 vscode "ms-vscode.remote-explorer"
 vscode "ms-vscode.remote-repositories"
 vscode "ms-vscode.remote-server"
 vscode "ms-vscode.vscode-typescript-next"
-vscode "PKief.material-icon-theme"
-vscode "Prisma.prisma"
+vscode "pkief.material-icon-theme"
+vscode "prisma.prisma"
+vscode "rangav.vscode-thunder-client"
 vscode "redhat.ansible"
 vscode "redhat.vscode-yaml"
-vscode "rust-lang.rust-analyzer"
 vscode "streetsidesoftware.code-spell-checker"
 vscode "svelte.svelte-vscode"
 vscode "vineelsai.vscoder"
 vscode "wix.vscode-import-cost"
+vscode "yoavbls.pretty-ts-errors"
