--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1078,12 +1078,7 @@ enable_audio_bell no
 
 #: Color scheme {{{
 
-# foreground #dddddd
-# background #000000
-
-#: The foreground and background colors.
-
-background_opacity 0.8
+background_opacity 0.9
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1162,88 +1157,76 @@ background_blur 1
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-# selection_foreground #000000
-# selection_background #fffacd
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
-#: The foreground and background colors for text selected with the
-#: mouse. Setting both of these to none will cause a "reverse video"
-#: effect for selections, where the selection will be the cell text
-#: color and the text will become the cell background color. Setting
-#: only selection_foreground to none will cause the foreground color
-#: to be used unchanged. Note that these colors can be overridden by
-#: the program running in the terminal.
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
 
-#: The color table {{{
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
 
-#: The 256 terminal colors. There are 8 basic colors, each color has a
-#: dull and bright version, for the first 16 colors. You can set the
-#: remaining 240 colors as color16 to color255.
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
 
-# color0 #000000
-# color8 #767676
+# OS Window titlebar colors
+wayland_titlebar_color  #1E1E2E
+macos_titlebar_color    #1E1E2E
 
-#: black
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
 
-# color1 #cc0403
-# color9 #f2201f
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
 
-#: red
+# The 16 terminal colors
 
-# color2  #19cb00
-# color10 #23fd00
+# black
+color0 #45475A
+color8 #585B70
 
-#: green
+# red
+color1 #F38BA8
+color9 #F38BA8
 
-# color3  #cecb00
-# color11 #fffd00
+# green
+color2  #A6E3A1
+color10 #A6E3A1
 
-#: yellow
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
 
-# color4  #0d73cc
-# color12 #1a8fff
+# blue
+color4  #89B4FA
+color12 #89B4FA
 
-#: blue
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
 
-# color5  #cb1ed1
-# color13 #fd28ff
+# cyan
+color6  #94E2D5
+color14 #94E2D5
 
-#: magenta
-
-# color6  #0dcdcd
-# color14 #14ffff
-
-#: cyan
-
-# color7  #dddddd
-# color15 #ffffff
-
-#: white
-
-# mark1_foreground black
-
-#: Color for marks of type 1
-
-# mark1_background #98d3cb
-
-#: Color for marks of type 1 (light steel blue)
-
-# mark2_foreground black
-
-#: Color for marks of type 2
-
-# mark2_background #f2dcd3
-
-#: Color for marks of type 1 (beige)
-
-# mark3_foreground black
-
-#: Color for marks of type 3
-
-# mark3_background #f274bc
-
-#: Color for marks of type 3 (violet)
-
-#: }}}
+# white
+color7  #BAC2DE
+color15 #A6ADC8
 
 #: }}}
 
