--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ input {
     follow_mouse = 0
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -89,7 +89,9 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
+    workspace_swipe_create_new = true
 }
 
 # Example per-device config
