--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,8 +5,8 @@ monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
 
 # Execute your favorite apps at launch
 exec-once = hyprpm reload -n
-exec-once = waybar & hyprpaper & dunst & bitwarden-desktop
-exec-once =/usr/libexec/polkit-gnome-authentication-agent-1
+exec-once = waybar & hyprpaper & dunst & 1password --silent
+exec-once =/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hypridle
