--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,11 +5,13 @@ monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
 
 # Execute your favorite apps at launch
 exec-once = hyprpm reload -n
-exec-once = waybar & hyprpaper & dunst & 1password --silent
+exec-once = waybar & hyprpaper & dunst & bitwarden-desktop
 exec-once =/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hypridle
+exec-once=[workspace 1 silent] kitty
+exec-once=[workspace 2 silent] google-chrome-stable
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -113,9 +115,10 @@ $altMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, L, exec, systemctl suspend
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, Q, exit
-bind = $mainMod SHIFT, R, exec, killall waybar || killall .waybar-wrapped && waybar && hyprpm reload -n
+bind = $mainMod SHIFT, R, exec, killall waybar || killall .waybar-wrapped && waybar && hyprpaper && hyprpm reload -n
 
 # App specific binds
 bind = $mainMod, RETURN, exec, kitty
