--- a/.gitconfig
+++ b/.gitconfig
@@ -27,10 +27,10 @@
 	defaultBranch = main
 [credential "https://github.com"]
 	helper = 
-	helper = !gh auth git-credential
+	helper = !/usr/bin/gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
-	helper = !gh auth git-credential
+	helper = !/usr/bin/gh auth git-credential
 [pull]
 	rebase = false
 	ff = true
